# vlm-for-insulator-defect-detection

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  roadmap.md
configs/: eval.yaml  infer.yaml  next_research_baselines.yaml  stage4_detector_to_vlm_pred_val.yaml  stage4_detector_to_vlm_pred_val_context_pad030.yaml  stage4_detector_to_vlm_pred_val_context_pad050.yaml  train.yaml  vlm_models_registry.yaml
docs/: detector_baseline_v1.md  detector_to_vlm_contract.md  leakage_free_rerun_plan.md  stage3_adaptation_branch_plan.md  stage3_gt_bbox_to_vlm_plan.md  stage3_pilot_quickstart.md  stage3_vlm_baseline_quickstart.md  stage4_detector_to_vlm_quickstart.md  vlm_expansion_plan.md  vlm_labels_v1_spec.md  vlm_model_availability_audit.md
notebooks/: prepare_coco_for_kaggle_colab.ipynb  smoke_test.ipynb  stage3_clip_hybrid_broken_aware_clean.ipynb  stage3_clip_hybrid_coarse_benchmark_clean.ipynb  stage3_final_micro_ablation_v6d_vs_v6f.ipynb  stage3_final_micro_ablation_v6d_vs_v6f_clean.ipynb  stage3_model_sweep_qwen_clean.ipynb  stage3_prompt_sweep_coarse_v7_clean.ipynb  stage3_prompt_sweep_flashover_v7b_micro_clean.ipynb  stage3_prompt_sweep_visibility_v6.ipynb  stage3_prompt_sweep_visibility_v6_clean.ipynb  stage3_qwen25vl_3b_lora_sft_repair_clean.ipynb  stage3_qwen25vl_3b_lora_smoke_clean.ipynb  stage3_qwen3_4b_prompt_repair_clean.ipynb  stage3_qwen_kaggle_clean_onepass.ipynb  stage3_qwen_kaggle_onepass.ipynb  stage3_qwen_kaggle_run.ipynb  stage3_qwen_kaggle_v5_onepass.ipynb  stage3_vlm_triage_internvl3_2b_clean.ipynb  (+7 more)
scripts/: idid_to_coco.py  (+32 more)
(+433 files in other folders)
