[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerline-insulator-defect-mre"
version = "0.1.0"
description = "Minimal reproducible COCO detection project (PyTorch + Hydra)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "hydra-core",
  "omegaconf",
  "pycocotools",
  "numpy",
  "pillow",
  "tqdm",
  "matplotlib",
  "PyYAML",
  "wandb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
